syntax = "proto3";

package user;

option go_package = "pb/user";


service User {
    rpc CreateUser     (CreateUserRequest)     returns (CreateUserResponse)     {}
    rpc UpdateUser     (UpdateUserRequest)     returns (UpdateUserResponse)     {}
    rpc GetUser        (GetUserRequest)        returns (GetUserResponse)        {}
    rpc GetUserByPhone (GetUserByPhoneRequest) returns (GetUserByPhoneResponse) {}
}

message UserInfo {
    int64   ID       = 10;
    string  Username = 20;
    string  Phone    = 30;
    int64   Age      = 40;
    SexType Sex      = 50;
}

enum SexType {
    Default = 0;
    Man     = 1;
    Woman   = 2;
}

message CreateUserRequest {
    UserInfo In = 10;
}

message CreateUserResponse {
    UserInfo Info = 10;
}

message UpdateUserRequest {
    UserInfo In = 10;
}

message UpdateUserResponse {
    UserInfo Info = 10;
}

message GetUserRequest {
    int64 ID = 10;
}

message GetUserResponse {
    UserInfo Info = 10;
}

message GetUserByPhoneRequest {
    string Phone = 10;
}

message GetUserByPhoneResponse {
    UserInfo Info = 10;
}
